--- a/hello-world/Jenkinsfile
+++ b/hello-world/Jenkinsfile
@@ -16,12 +16,12 @@ pipeline {
                 echo 'Run the security check against the application' 
             }
         }
-        stage('Run Unit Tests') {
+        stage('Run Unit Tests 2') {
             steps {
                 echo 'Run unit tests from the source code' 
             }
         }
-        stage('Run Integration Tests') {
+        stage('Run Integration Tests 2') {
             steps {
                 echo 'Run only crucial integration tests from the source code' 
             }
